Theming bug fix (#940)
* Initial dark mode code from original branch.

* Remove obsolete resources

* fixed add order input fields being only 33px wide

* nvm actually fixed it!

* gave selected choice a indent

* fixed protube remote

* Fix modals.

* - fixed horizontal lines being hard to see.
- fixed list group headers being white.

* fixed protube search results uneven nth child being white

* made theming possible and reversed use_dark_mode migration.

* cleaned up some debugging stuff

* fixed some last bugs with the omnomcom and links in lightmode

--- a/resources/assets/sass/light-theme.scss
+++ b/resources/assets/sass/light-theme.scss
@@ -44,3 +44,7 @@ $body-bg: #f1f1f1;
   background: $warning;
   border-color: $warning;
 }
+
+//links
+$link-color: $info;
+$link-hover-color: lighten($info, 10%);
